# hotcross

./: .gitignore  CHANGELOG.md  CLAUDE.md  FEATURES.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml  smithery.json
examples/: basic_usage.py  code_intel_demo.py  docs_demo.py  multilang_demo.py  project_demo.py  self_hosted_demo.py  tier_demo.py
scripts/: MIGRATION.md  schema.sql  test_auth.py
src/: __init__.py  server.py
src/core/: __init__.py  auth.py  database.py  license.py  metadata.py  middleware.py  portal.py  registry.py
src/intel/: __init__.py  graph.py  indexer.py  parser.py
src/intel/rules/: __init__.py  base.py  javascript.py  python.py  registry.py
src/models/: __init__.py  auth.py  code_intel.py  schemas.py
src/uri/: __init__.py  parser.py
tests/: __init__.py  conftest.py  test_code_intel.py  test_complete_flow.py  test_mcp_server.py  test_portal.py  test_server.py  test_uri.py
