[project]
name = "hotcross"
version = "0.1.0"
description = "MCP-powered code intelligence relay with persistent context storage"
readme = "README.md"
license = { text = "Elastic-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Atelier Logos", email = "hello@atelierlogos.com" }]
keywords = ["mcp", "memory", "context", "chdb", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0",
    "chdb>=2.0",
    "pydantic>=2.0",
    "pyarrow>=14.0",
    # Code intelligence
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    # Authentication
    "asyncpg>=0.29",
    "stripe>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[project.scripts]
hotcross = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
